Full fix for broken CSS

--- a/src/web/assets/theme/css/style.css
+++ b/src/web/assets/theme/css/style.css
@@ -1,8 +1,4 @@
 @charset "UTF-8";
-section {
-  background-color: #ffffff;
-}
-
 body {
   font-style: normal;
   line-height: 1.5;
